--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,85 +1,66 @@
-/*.message {*/
+.message {
+    /*border: 2px solid black;*/
+    display: flex;
+    flex-direction: column;
+}
 
-/*}*/
+.imageAndText {
+    /*border: 2px solid #ee0707;*/
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+}
 
-/*.imageAndText {*/
-
-/*}*/
-
-/*.imageAndText img {*/
-/*    position: absolute;*/
-/*    width: 48px;*/
-/*    height: 48px;*/
-/*    left: 1162px;*/
-/*    top: 180px;*/
-
-
-/*}*/
-
-/*.text {*/
-/*    position: absolute;*/
-/*    width: 527px;*/
-/*    height: 60px;*/
-/*    left: 635px;*/
-/*    top: 168px;*/
-
-/*    background: #0066CC;*/
-/*    box-shadow: 0 5px 20px rgba(29, 33, 38, 0.03), 0 1px 2px rgba(29, 33, 38, 0.1);*/
-/*}*/
-
-/*.text:after {*/
-
-/*}*/
-
-/*.name {*/
-/*    position: absolute;*/
-/*    width: 40px;*/
-/*    height: 22px;*/
-/*    left: 1097px;*/
-/*    top: 175px;*/
-
-/*    font-family: 'Montserrat', serif;*/
-/*    font-style: normal;*/
-/*    font-weight: 600;*/
-/*    font-size: 18px;*/
-/*    line-height: 22px;*/
-/*    !* identical to box height *!*/
+.imageAndText img {
+    /*border: 2px solid #d39614;*/
+    height: 48px;
 
 
-/*    color: #bb1c1c;*/
+}
 
-/*}*/
+.text {
+    /*border: 2px solid #46d501;*/
+    background-color: #0066CC;
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+    margin-right: 10px;
+}
 
-/*.messageText {*/
-/*    position: absolute;*/
-/*    width: 489px;*/
-/*    height: 20px;*/
-/*    left: 648px;*/
-/*    top: 200px;*/
+.text:after {
+    border: 2px solid #d57e7e;
+}
 
-/*    font-family: 'Montserrat', serif;*/
-/*    font-style: normal;*/
-/*    font-weight: 400;*/
-/*    font-size: 16px;*/
-/*    line-height: 20px;*/
-/*    !* identical to box height *!*/
+.name {
 
+    /*border: 2px solid #0ca2c2;*/
+    margin: 5px;
+    text-align: right;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+}
 
-/*    color: #b91d1d;*/
-/*}*/
+.messageText {
+    /*border: 2px solid #0d24c4;*/
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 5px;
+}
 
-/*.time {*/
-/*    position: absolute;*/
-/*    width: 26px;*/
-/*    height: 12px;*/
-/*    left: 1173px;*/
-/*    top: 233px;*/
-
-/*    font-family: 'Montserrat', serif;*/
-/*    font-style: normal;*/
-/*    font-weight: 600;*/
-/*    font-size: 10px;*/
-/*    line-height: 12px;*/
-
-/*    color: #000000;*/
-/*}*/
+.time {
+    text-align: end;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12px;
+    color: #000000;
+    padding-right: 11px;
+    /*border: 2px solid #ae05d3;*/
+}
