--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,33 +1,35 @@
-/*.sendForm {*/
+.sendForm {
+    /*border: 2px solid #d39614;*/
+display: flex;
+}
 
-/*}*/
+.textarea {
+    /*border: 2px solid #46d501;*/
+    width: 976px;
+    height: 40px;
+    left: 70px;
+    top: 408px;
+    /*box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);*/
+    border-radius: 20px;
 
-/*.textarea {*/
-/*    position: absolute;*/
-/*    width: 976px;*/
-/*    height: 40px;*/
-/*    left: 70px;*/
-/*    top: 408px;*/
+    background: #F5F7FB;
+}
 
-/*    background: #F5F7FB;*/
-/*    box-shadow: 0 5px 20px rgba(29, 33, 38, 0.03), 0 1px 2px rgba(29, 33, 38, 0.1);*/
-/*    border-radius: 20px;*/
-/*}*/
+.button {
+    /*border: 2px solid #0d24c4;*/
+    width: 120px;
+    height: 40px;
+    left: 1090px;
+    top: 408px;
 
-/*.button {*/
-/*    position: absolute;*/
-/*    width: 120px;*/
-/*    height: 40px;*/
-/*    left: 1090px;*/
-/*    top: 408px;*/
+    background: #0066CC;
+    border-radius: 20px;
+    color: white;
+}
 
-/*    background: #0066CC;*/
-/*    border-radius: 20px;*/
-/*}*/
+.button:hover {
 
-/*.button:hover {*/
+}
+.button:active {
 
-/*}*/
-/*.button:active {*/
-
-/*}*/
+}
